Fix ical download link alignment.

--- a/app/assets/stylesheets/sections/_my_bookings.css.scss
+++ b/app/assets/stylesheets/sections/_my_bookings.css.scss
@@ -180,6 +180,10 @@ section#reservations {
             text-overflow: ellipsis;
             white-space: nowrap;
 
+            &.ical {
+              display: inline;
+            }
+
             a {
               text-decoration: none !important;
 
